subdir('Host')
subdir('CFMLimit')
subdir('FanPwm')
subdir('ThermalMode')
subdir('FanRedundancy')
subdir('Device')
subdir('MinimumShipLevel')
subdir('ChassisCapabilities')
subdir('FanSpeed')
subdir('FieldMode')
subdir('Mode')
subdir('PowerSupplyAttributes')
subdir('PowerSupplyRedundancy')
subdir('Power')
subdir('TPM')
subdir('Security')
subdir('Service')
subdir('Boot')
