_sdbusplus_xyz_openbmc_project_Control_FanPwm_md = []
_sdbusplus_xyz_openbmc_project_Control_MinimumShipLevel_md = []
_sdbusplus_xyz_openbmc_project_Control_Device_md = []
_sdbusplus_xyz_openbmc_project_Control_ChassisCapabilities_md = []
_sdbusplus_xyz_openbmc_project_Control_PowerSupplyAttributes_md = []
_sdbusplus_xyz_openbmc_project_Control_ThermalMode_md = []
_sdbusplus_xyz_openbmc_project_Control_CFMLimit_md = []
_sdbusplus_xyz_openbmc_project_Control_FanRedundancy_md = []
_sdbusplus_xyz_openbmc_project_Control_FanSpeed_md = []
_sdbusplus_xyz_openbmc_project_Control_Mode_md = []
_sdbusplus_xyz_openbmc_project_Control_Host_md = []
_sdbusplus_xyz_openbmc_project_Control_PowerSupplyRedundancy_md = []
_sdbusplus_xyz_openbmc_project_Control_FieldMode_md = []
subdir('Host')
subdir('CFMLimit')
subdir('FanPwm')
subdir('ThermalMode')
subdir('Security')
subdir('FanRedundancy')
subdir('Device')
subdir('MinimumShipLevel')
subdir('Power')
subdir('ChassisCapabilities')
subdir('FanSpeed')
subdir('FieldMode')
subdir('Boot')
subdir('Service')
subdir('Mode')
subdir('PowerSupplyAttributes')
subdir('TPM')
subdir('PowerSupplyRedundancy')

custom_target(
  'FanPwm.md',
  output: 'FanPwm.md',
  input: _sdbusplus_xyz_openbmc_project_Control_FanPwm_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'xyz/openbmc_project/Control/FanPwm.md')

custom_target(
  'MinimumShipLevel.md',
  output: 'MinimumShipLevel.md',
  input: _sdbusplus_xyz_openbmc_project_Control_MinimumShipLevel_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'xyz/openbmc_project/Control/MinimumShipLevel.md')

custom_target(
  'Device.md',
  output: 'Device.md',
  input: _sdbusplus_xyz_openbmc_project_Control_Device_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'xyz/openbmc_project/Control/Device.md')

custom_target(
  'ChassisCapabilities.md',
  output: 'ChassisCapabilities.md',
  input: _sdbusplus_xyz_openbmc_project_Control_ChassisCapabilities_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'xyz/openbmc_project/Control/ChassisCapabilities.md')

custom_target(
  'PowerSupplyAttributes.md',
  output: 'PowerSupplyAttributes.md',
  input: _sdbusplus_xyz_openbmc_project_Control_PowerSupplyAttributes_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'xyz/openbmc_project/Control/PowerSupplyAttributes.md')

custom_target(
  'ThermalMode.md',
  output: 'ThermalMode.md',
  input: _sdbusplus_xyz_openbmc_project_Control_ThermalMode_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'xyz/openbmc_project/Control/ThermalMode.md')

custom_target(
  'CFMLimit.md',
  output: 'CFMLimit.md',
  input: _sdbusplus_xyz_openbmc_project_Control_CFMLimit_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'xyz/openbmc_project/Control/CFMLimit.md')

custom_target(
  'FanRedundancy.md',
  output: 'FanRedundancy.md',
  input: _sdbusplus_xyz_openbmc_project_Control_FanRedundancy_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'xyz/openbmc_project/Control/FanRedundancy.md')

custom_target(
  'FanSpeed.md',
  output: 'FanSpeed.md',
  input: _sdbusplus_xyz_openbmc_project_Control_FanSpeed_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'xyz/openbmc_project/Control/FanSpeed.md')

custom_target(
  'Mode.md',
  output: 'Mode.md',
  input: _sdbusplus_xyz_openbmc_project_Control_Mode_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'xyz/openbmc_project/Control/Mode.md')

custom_target(
  'Host.md',
  output: 'Host.md',
  input: _sdbusplus_xyz_openbmc_project_Control_Host_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'xyz/openbmc_project/Control/Host.md')

custom_target(
  'PowerSupplyRedundancy.md',
  output: 'PowerSupplyRedundancy.md',
  input: _sdbusplus_xyz_openbmc_project_Control_PowerSupplyRedundancy_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'xyz/openbmc_project/Control/PowerSupplyRedundancy.md')

custom_target(
  'FieldMode.md',
  output: 'FieldMode.md',
  input: _sdbusplus_xyz_openbmc_project_Control_FieldMode_md,
  capture: true,
  command: [cat_prog, '@INPUT@'],
  install: true,
  install_dir: get_option('datadir') / meson.project_name() / 'xyz/openbmc_project/Control/FieldMode.md')
